Fix: Improve contrast in background color.

--- a/_sass/site/base/_variables.scss
+++ b/_sass/site/base/_variables.scss
@@ -43,7 +43,7 @@
   --inner-padding-horizontal: #{rem(10px)};
 
   --color-primary: 255,255,255;
-  --color-secondary: 255,105,180;
+  --color-secondary: 209,29,122;
   --color-tertiary: 0, 0, 255;
   --color-action: #65ff80;
 
